fix tiny z-index bug

--- a/src/Application.scss
+++ b/src/Application.scss
@@ -44,6 +44,9 @@
   overflow: hidden;
 }
 
+.scholar-draft-SideToolbar{
+  z-index: 2;
+}
 
 .bibtex-editor{
   padding: 1rem;
